# web-vtu-viz

./: .gitignore
next-vtu-viz/: THEME_GUIDE.md  package-lock.json  package.json
next-vtu-viz/public/: rust-vtu.d.ts
next-vtu-viz/public/assets/csv/: points.csv
next-vtu-viz/src/app/: globals.css  layout.tsx  page.tsx  wasm.tsx
next-vtu-viz/src/app/components/elements/: FileReader.tsx  FileUpload.tsx  index.ts
next-vtu-viz/src/app/components/elements/ThemeToggle/: ThemeToggle.tsx
next-vtu-viz/src/app/components/layout/: index.ts
next-vtu-viz/src/app/components/layout/Header/: Header.tsx
next-vtu-viz/src/app/components/layout/MainView/: MainView.tsx
next-vtu-viz/src/app/components/layout/Sidetray/: Sidetray.tsx
next-vtu-viz/src/app/components/views/: index.ts
next-vtu-viz/src/app/components/views/Canvas/: Canvas.tsx
next-vtu-viz/src/app/providers/: WasmProvider.tsx
next-vtu-viz/src/app/utils/: fileReaders.ts
next-vtu-viz/src/app/wasm-app/: WasmApp.tsx  rust-vtu.d.ts  rust-vtu.js  rust-vtu_bg.wasm.d.ts
rust-vtu/: Cargo.toml  README.md
rust-vtu/assets/csv/: pressure.csv  velocity.csv
rust-vtu/assets/shaders/: instance_shader.wgsl
rust-vtu/scripts/: build-web.sh  build.sh
rust-vtu/src/: api.rs  main.rs  parse.rs
rust-vtu/src/plugins/: instanced_renderer.rs  isosurface.rs  mesh_renderer.rs  mod.rs  storage_buffer_renderer.rs  util.rs
rust-vtu/src/plugins/data/: cells.rs  mod.rs  points.rs  velocity.rs
rust-vtu/src/plugins/marching_cubes/: algorithm.rs
web-vtu-viz/: index.html
web-vtu-viz/wasm/: rust-vtu.js
(+2 files in other folders)
